sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:19: error: not found: value echanger
  while(!echanger)
         ^